Fix alignments on avatar header

--- a/labsystem/scss/components/_lab-sidebar.scss
+++ b/labsystem/scss/components/_lab-sidebar.scss
@@ -93,17 +93,10 @@ $vivid-bg: map-get($narrow-sidebar-theme, "60");
 .lab-narrow-sidebar__avatar {
   display: flex;
   align-items: center;
-  margin-left: 28px;
-  margin-bottom: 12px;
-
-  @include from($tablet) {
-    margin: 0 0 8px 0;
-  }
 
   &-photo {
     width: 48px;
     height: 48px;
-    margin: 12px 8px 12px 0;
 
     img {
       border-radius: 100%;
@@ -112,15 +105,12 @@ $vivid-bg: map-get($narrow-sidebar-theme, "60");
       object-fit: cover;
       object-position: left;
     }
-
-    @include from($tablet) {
-      margin: 0 0 8px 0;
-    }
   }
 
   &-text {
     display: flex;
     flex-direction: column;
+    margin-left: 20px;
     color: $teal-70;
     font-weight: $weight-bold;
     font-family: $font-primary;
@@ -281,6 +271,10 @@ $vivid-bg: map-get($narrow-sidebar-theme, "60");
 
   @include from($tablet) {
     align-items: center;
+  }
+
+  .lab-narrow-sidebar__avatar {
+    margin-bottom: 18px;
   }
 }
 
